--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"next-auth": "^4.18.7",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"sass": "^1.57.1",
 		"superjson": "1.9.1",
 		"zod": "^3.20.2"
 	},
@@ -38,7 +39,7 @@
 		"prettier": "^2.8.1",
 		"prettier-plugin-tailwindcss": "^0.2.1",
 		"prisma": "^4.8.0",
-		"tailwindcss": "^3.2.0",
+		"tailwindcss": "^3.2.4",
 		"typescript": "^4.9.4"
 	},
 	"ct3aMetadata": {
