feat: integration with slack sort of
Signed-off-by: Daniel Thorp <arcanistzed@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,11 +26,12 @@
     "**/*.tsx",
     "**/*.cjs",
     "**/*.mjs",
+    "**/*.cts",
     "../next.config.mjs",
     "../postcss.config.cjs",
     "../prettier.config.cjs",
     "../tailwind.config.cjs"
-  ],
+, "src/discord/process.cks", "sockets/socket.mjs"  ],
   "exclude": [
     "node_modules"
   ]
