--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
 		"@trpc/next": "^10.8.1",
 		"@trpc/react-query": "^10.8.1",
 		"@trpc/server": "^10.8.1",
+		"discord.js": "^14.7.1",
 		"next": "13.1.2",
 		"next-auth": "^4.18.7",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"socket.io": "^4.5.4",
+		"socket.io-client": "^4.5.4",
 		"superjson": "1.9.1",
 		"zod": "^3.20.2"
 	},
@@ -29,6 +32,8 @@
 		"@types/prettier": "^2.7.2",
 		"@types/react": "^18.0.26",
 		"@types/react-dom": "^18.0.10",
+		"@types/socket.io": "^3.0.2",
+		"@types/socket.io-client": "^3.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.47.1",
 		"@typescript-eslint/parser": "^5.47.1",
 		"autoprefixer": "^10.4.7",
