--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
 		"dev": "next dev",
 		"postinstall": "prisma generate",
 		"lint": "next lint",
-		"start": "next start"
+		"start": "next start",
+		"discord": "nodemon discord/process.mjs",
+		"ngrok": "ngrok http 3000",
+		"socket": "nodemon socket/socket.mjs"
 	},
 	"dependencies": {
 		"@next-auth/prisma-adapter": "^1.0.5",
@@ -18,6 +21,7 @@
 		"@trpc/react-query": "^10.8.1",
 		"@trpc/server": "^10.8.1",
 		"discord.js": "^14.7.1",
+		"dotenv": "^16.0.3",
 		"next": "13.1.2",
 		"next-auth": "^4.18.7",
 		"react": "18.2.0",
@@ -39,6 +43,7 @@
 		"autoprefixer": "^10.4.7",
 		"eslint": "^8.30.0",
 		"eslint-config-next": "13.1.2",
+		"nodemon": "^2.0.20",
 		"postcss": "^8.4.14",
 		"prettier": "^2.8.1",
 		"prettier-plugin-tailwindcss": "^0.2.1",
