chore: update env example
Signed-off-by: Daniel Thorp <arcanistzed@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ DATABASE_URL="file:./sqlite.db"
 # You can generate the secret via 'openssl rand -base64 32' on Linux
 # More info: https://next-auth.js.org/configuration/options#secret
 NEXTAUTH_SECRET=
-NEXTAUTH_URL=
+NEXTAUTH_URL=http://localhost:3000
 
 # Next Auth Discord Provider
 DISCORD_CLIENT_ID=
@@ -16,6 +16,9 @@ DISCORD_CLIENT_SECRET=
 SLACK_CLIENT_ID=
 SLACK_CLIENT_SECRET=
 
-# Slack Bot Token
-SLACK_SIGNING_SECRET=
+# Discord Token
+DISCORD_TOKEN==
+
+# Slack Tokens
+SLACK_USER_TOKEN=
 SLACK_BOT_TOKEN=
