--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
 		"postinstall": "prisma generate",
 		"lint": "next lint",
 		"start": "next start",
-		"discord": "nodemon discord/process.mjs",
+		"discord": "node discord/process.mjs",
+		"discord:dev": "nodemon discord/process.mjs",
 		"ngrok": "ngrok http 3000",
-		"socket": "nodemon socket/socket.mjs"
+		"socket": "node socket/socket.mjs",
+		"socket:dev": "nodemon socket/socket.mjs"
 	},
 	"dependencies": {
 		"@next-auth/prisma-adapter": "^1.0.5",
